--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.158.0",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/three": "^0.158.2",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "prettier": "^3.1.0",
+    "r3f-perf": "^7.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.1"
